Fragile component is added in order to emulate some critical part of the application, which cannot be self recovered; "break" end-point added in order to make FragileComponent disabled; Request pool statistic is read as a DTO; Service response is added to provide pod name; Load manager was replaced by request pool; Small refactoring; Some commentaries added;

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ management:
     web:
       base-path: /manage
       exposure:
-        include: info,health,refresh,shutdown
+        include: health,shutdown
   endpoint:
     health:
       probes:
@@ -22,7 +22,7 @@ management:
         readiness:
           include: readinessState,requestPool
         liveness:
-          include: livenessState, diskSpace
+          include: livenessState,diskSpace,fragileComponent
       show-details: always
     shutdown:
       enabled: true
