--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
     app: frontservice
   name: frontservice
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: frontservice
@@ -18,10 +18,38 @@ spec:
         app: frontservice
     spec:
       containers:
-      - image: poc-service-probes-frontservice:1.0-SNAPSHOT
-        name: frontservice
-        imagePullPolicy: Never
-        resources: {}
+        - name: frontservice
+          image: poc-service-probes-frontservice:1.1-SNAPSHOT
+          imagePullPolicy: Never
+          resources: {}
+
+          livenessProbe:
+            httpGet:
+              # path: /frontservice/ping
+              path: /frontservice/manage/health/liveness
+              port: 8080
+            # initial delay should be big enough to get your container started
+            initialDelaySeconds: 20
+            # liveness probes should be inexpensive and have fast response time to keep time period small
+            periodSeconds: 10
+            # Number of seconds after which the probe times out. Slow response can point out some serious issues.
+            timeoutSeconds: 5
+            # we have to make sure, that it's not a connection lag before restarting a pod
+            # this value should be considered together with "timeoutSeconds"
+            failureThreshold: 3
+
+          readinessProbe:
+            httpGet:
+              path: /frontservice/manage/health/readiness
+              port: 8080
+            # the number of times the readiness probe needs to fail before the pod will no longer be considered ready
+            # it depends on health check logic in a target service, still we can forgive some failures with fast recovery
+            failureThreshold: 2
+            initialDelaySeconds: 20
+            # time period really depends on components included into readiness group
+            # some of them, such as rabbitmq built-in health check, are very expensive and shouldn't be invoked very often
+            periodSeconds: 5
+
 status: {}
 ---
 apiVersion: v1
@@ -33,12 +61,12 @@ metadata:
   name: frontservice
 spec:
   ports:
-  - name: 8080-8080
-    port: 8080
-    protocol: TCP
-    targetPort: 8080
+    - name: 8081-8080
+      port: 8081
+      protocol: TCP
+      targetPort: 8080
   selector:
     app: frontservice
-  type: ClusterIP
+  type: LoadBalancer
 status:
   loadBalancer: {}
